--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -8,7 +8,7 @@ theme = "gohugo-theme-syzygy-callysto"
   # Link to the login page of the hub
   hub_url = "/"
   signin_text = "Sign in with your account"
-  logo = "/images/logo-13.svg"
+  logo = "/images/logo.svg"
   #custom_css = ["css/foo.css"]
 
 [menu]
