Add a span around nav items
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,15 +1,13 @@
-baseURL = "http://site.example.com/"
+baseURL = "http://hub.callysto.ca/"
 languageCode = "en-us"
-title = "site.example.com"
-themesDir = "../.."
+title = "{{ callysto_html_hostname }}"
 theme = "gohugo-theme-syzygy-callysto"
+themesDir = "../.."
 
 [params]
-  # Link to the login page of the hub
-  hub_url = "/"
+  hub_url = "/jupyter/hub"
   signin_text = "Sign in with your account"
   logo = "/images/logo.svg"
-  #custom_css = ["css/foo.css"]
 
 [menu]
   [[menu.main]]
@@ -19,8 +17,36 @@ theme = "gohugo-theme-syzygy-callysto"
     weight = "10"
 
   [[menu.main]]
+    identifier = "support"
+    name = "support"
+    post = " <i class='fa fa-envelope'></i>"
+    url = "mailto:{{ callysto_html_support_email }}"
+    weight = "20"
+  
+  [[menu.main]]
+    identifier = "callysto.ca"
+    name = "callysto.ca"
+    post = " <i class='fas fa-external-link-alt'></i>"
+    url = "https://callysto.ca"
+    weight = "30"
+  
+  [[menu.main]]
+    identifier = "tutorial"
+    name = "tutorial"
+    post = " <i class='fas fa-external-link-alt'></i>"
+    url = "https://intro.syzygy.ca"
+    weight = "40"
+  
+  [[menu.main]]
+    identifier = "partners"
+    name = "partners"
+    pre = ""
+    url = "#partners"
+    weight = "50"
+
+  [[menu.main]]
     identifier = "sign-in"
     name = "sign-in"
     pre = "<i class='fas fa-sign-in-alt'></i>"
-    url = "/"
+    url = "/jupyter/hub"
     weight = "100"
